# ForgeCore

./: .gitignore  .replit  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--PHASE-1-BACKEND-PLATFORM-IMPLEMENTATION-You-are-a-seni_1778148151768.txt  Pasted--UNIFIED-ENGINEERING-PROMPT-PHASE-1-BACKEND-PLATFORM-IM_1778147977033.txt
backend_platform/: .env.example  conftest.py  start.sh
backend_platform/apps/api_keys/: authentication.py  models.py  serializers.py  services.py  urls.py
backend_platform/apps/api_keys/api/: views.py
backend_platform/apps/audit_logs/: models.py  serializers.py  services.py  urls.py
backend_platform/apps/authentication/: backends.py  permissions.py  serializers.py  services.py  tokens.py  urls.py
backend_platform/apps/common/: exceptions.py  pagination.py  permissions.py  responses.py  tasks.py
backend_platform/apps/email_service/: apps.py  models.py  serializers.py  services.py  urls.py
backend_platform/apps/health/: apps.py  urls.py  views.py
backend_platform/apps/organizations/: models.py  serializers.py  services.py  urls.py
backend_platform/apps/storage_service/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py
backend_platform/apps/users/: models.py  serializers.py  services.py  urls.py
backend_platform/config/: urls.py
backend_platform/config/settings/: base.py  development.py  production.py
backend_platform/tests/: test_api_keys.py  test_authentication.py  test_health.py  test_organizations.py
(+35 files in other folders)
